fixed broken css

--- a/src/sass/imports/_nav.scss
+++ b/src/sass/imports/_nav.scss
@@ -66,7 +66,7 @@
   }
 
   &--dark {
-    background: #333
+    background: #333;
     padding: 1em;
     .hamburger__icon-path {
       fill: $color_dark;
